# switch-11-22-ms220

./: README.md
linux-3.18/: Makefile
linux-3.18/arch/mips/: Kconfig
linux-3.18/arch/x86/: Kconfig
linux-3.18/drivers/: Makefile
linux-3.18/drivers/char/: Kconfig
linux-3.18/drivers/gpio/: Kconfig  gpio-pca953x.c
linux-3.18/drivers/hwmon/: amc6821.c
linux-3.18/drivers/leds/: led-triggers.c
linux-3.18/drivers/meraki/: Kconfig  Makefile  cisco-act-i2c.c  cisco-act-spi.c  cisco-act.c  cisco-mps.c  cisco-rps.c  sfp_user.c
linux-3.18/drivers/mtd/: ofpart.c
linux-3.18/fs/pstore/: ram.c
linux-3.18/include/linux/: band_steering.h  bch.h  crypto.h  netdevice.h  skbuff.h
linux-3.18/mm/: vmalloc.c
linux-3.18/net/core/: band_steering.c  click_offload.c  dev.c  dev_ioctl.c  skbuff.c
linux-3.18/net/ipv4/: devinet.c
openwrt/: .gitignore  Config.in  Makefile  boardconfig-dummy.mk  config-elemental-3.18  name_build  rules.mk
openwrt/docs/: buildroot-documentation.html
openwrt/package/: Config.in  Makefile  depend.mk  rules.mk
openwrt/package/6tunnel/: Makefile
openwrt/package/aiccu/: Makefile
openwrt/package/aircrack/: Makefile
openwrt/package/amwall/: Makefile
openwrt/package/arpd/: Makefile
openwrt/package/arptables/: Makefile
openwrt/package/arpwatch/: Makefile
openwrt/package/asterisk/: Makefile
openwrt/package/atftp/: Makefile
openwrt/package/autossh/: Makefile
openwrt/package/avahi/: Makefile
openwrt/package/base-files/: Makefile
openwrt/package/bc/: Makefile
openwrt/package/bigreqsproto/: Config.in  Makefile
openwrt/package/bitchx/: Makefile
openwrt/package/bridge/: Makefile
openwrt/package/libecap/src/: Makefile.am  Makefile.in  bootstrap.sh  configure.in
openwrt/package/libecap/src/cfgaux/: xstd_cpp_checks.ac
openwrt/package/libecap/src/ecap_mods/: Makefile.am  autoconf.h  squid_ssl_sniffer.cc
openwrt/package/motiondetector/: CMakeLists.txt  Config.in  Makefile  motiondetector.cc
openwrt/package/motiondetector/ipkg/: motiondetector.control
openwrt/scripts/: download.pl  ipkg  patch-kernel.sh
openwrt/toolchain/: Config.in  Config.in.devel  Makefile
(+1229 files in other folders)
