#                                               -*- Autoconf -*-
#  @configure_input@
#
#  Configuration scipt for eCAP Library
#
# Process this file with autoconf to produce a configure script.

AC_INIT(Squid eCAP Adapter, 1.0.0, [], ecap_adapter_sample)
AC_CONFIG_AUX_DIR(cfgaux)
AC_CONFIG_MACRO_DIR(cfgaux)
AC_CONFIG_SRCDIR([ecap_mods/sample.h])
AC_CONFIG_HEADERS(ecap_mods/autoconf.h)

AM_INIT_AUTOMAKE([nostdinc])
AM_MAINTAINER_MODE

LT_INIT

m4_include(cfgaux/xstd_common.ac)
m4_include(cfgaux/xstd_cpp_checks.ac)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET


# Checks for libraries.
AX_PTHREAD

PKG_CHECK_MODULES(libecap, [libecap >= 1.0 libecap < 1.1])

# Checks for typedefs, structures, and compiler characteristics.
# AC_HEADER_STDBOOL
# AC_C_CONST

# Checks for library functions.

AC_CONFIG_FILES([\
        Makefile \
        ecap_mods/Makefile \
])
AC_OUTPUT
